[gd_scene load_steps=15 format=2]

[ext_resource path="res://Object/Component/HitBox/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assate/shader/damage_takken_flash.shader" type="Shader" id=2]
[ext_resource path="res://Assate/BeeSpawner.png" type="Texture" id=3]
[ext_resource path="res://Character/Spawner/Spawner.gd" type="Script" id=4]
[ext_resource path="res://Object/Component/HealtBar/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Object/Effect/Healing.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assate/wine.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 18 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/wave_speed = Vector2( 9.507, 0 )
shader_param/wave_length = Vector2( 0.026, 0.02 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifire = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 18 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.211765, 0.211765, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id=6]
resource_name = "anticipation"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5882, 0.745014 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_spawn_entity"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Spawner" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 16 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -16, 0 )

[node name="EntitySpawnPosition" type="Position2D" parent="."]
position = Vector2( 0, 53 )

[node name="SpawneTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HitBox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = -14.0
margin_top = 53.0
margin_right = 46.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 0 )
rect_scale = Vector2( 0.462324, 0.407332 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )

[node name="HealingPartical" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/anticipation = SubResource( 6 )
anims/default = SubResource( 7 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 7 )
offset = Vector2( 0, 8 )
flip_v = true

[node name="Tween" type="Tween" parent="."]

[node name="Position2D" type="Position2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 16 )

[connection signal="timeout" from="SpawneTimer" to="." method="_spawn_timer_timeout"]
